# PerseveraStyleAnalysis

./: .gitignore  README.md  pyproject.toml  setup.py
examples/: advanced_style_analysis.py  basic_style_analysis.py  best_subset_style_analysis_test.py  single_fund_style_analysis.py  style_analysis_marujo.py
persevera_style_analysis/: __init__.py
persevera_style_analysis/core/: __init__.py  best_subset_style_analysis.py  sharpe_style_analysis.py  stepwise_style_analysis.py
persevera_style_analysis/utils/: __init__.py  helpers.py
